# openapi-schema-to-json-schema

./: CHANGELOG.md  Cargo.toml  README.md
src/: consts.rs  error.rs  lib.rs  options.rs  parameter.rs  pattern.rs  schema.rs  value.rs
tests/: clone_schema.rs  combination_keywords.rs  combiners.rs  complex_schemas.rs  converters.rs  definition_keywords.rs  invalid_types.rs  items.rs  nullable.rs  numeric_types.rs  parameter.rs  pattern_properties.rs  properties.rs  readonly_writeonly.rs  string_types.rs  transform.rs  unsupported_properties.rs
tests/common/: mod.rs
