[package]
name = "openapi-schema-to-json-schema"
version = "0.2.0"
edition = "2021"
description = "Convert OpenAPI 3.0 schema objects to JSON Schema draft-04"
license = "MIT"
repository = "https://github.com/hey-jj/openapi-schema-to-json-schema"
readme = "README.md"
keywords = ["openapi", "json-schema", "swagger", "convert", "draft-04"]
categories = ["data-structures", "parsing"]

[dependencies]
# serde_json is the JSON value model. The `preserve_order` feature keeps object
# keys in insertion order so output is stable and matches the input layout.
serde_json = { version = "1", features = ["preserve_order"] }
